--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 APP_NAME=Ribbonate
 APP_ENV=local
-APP_KEY=base64:1PY98VjaBlgnSBhf7LfVy0ZxorIwWpx8Rj6skTyp+OY=
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=23.229.222.64
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=hadaya2db
-DB_USERNAME=deinsdbuser
-DB_PASSWORD=Services@me1
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,8 +28,8 @@ PUSHER_APP_SECRET=
 MAIL_DRIVER=smtp
 MAIL_HOST=in-v3.mailjet.com
 MAIL_PORT=587
-MAIL_USERNAME=e9bd86981587ef4c563ad99b3de399ef
-MAIL_PASSWORD=bd5a0765c7c4955dc07dd02728606ef6
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME=Hadaya
-MAIL_FROM_ADDRESS=info@digiteins.com
+MAIL_FROM_ADDRESS=
